2006-12-06  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed small bug on creating paintings
	* new capacitor property: symbol neutral/polar
	* new diode property: symbol normal/Schottky/Zener
	* fixed bug in wrong scrollbar position
	* minimized flicker on scrollbar moving
	* limit diagram size to scrollbar
	* LaTeX symbols in text of schematic frame

2006-11-25  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* new symbol for ideal transmission line and coax line
	* new component: 4-port transmission line

2006-11-05  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* new main menu: Positioning
	* New actions: center horizontally and vertically
	* keep mouse position during zoom
	* move tabular scroll bar directly with mouse

2006-10-28  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* improved component/wire move algorithm
	* fixed bug in distributing paintings

2006-10-21  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* set cursor keys free in id_text dialog
	* fixed bug in loading components without properties
	* fixed bug in viewport position of schematic after loading

2006-10-13  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* put equations also in subcircuit netlists
	* added parameters to subcircuits

2006-09-18  Stefan Jahn  <stefan@lkcc.org>

	* diagrams/diagram.cpp (loadGraphData): Fixed a minor bug in
	computation of the diagram limits.  Thanks to Michael.

2006-09-03  Stefan Jahn  <stefan@lkcc.org>

	* qtgeneric_cz.ts, qucs_cz.ts: Added Czech translations.

2006-08-30  Stefan Jahn  <stefan@lkcc.org>

      * main.cpp (main): Using ASCODIR environment variable (if set)
      in order to locate the ASCO binary.  Otherwise it must be 
      somewhere in the executable PATH.

      * dialogs/simmessage.cpp (startSimulator): Running ASCO
      appropriately and evaluating results.

2006-08-29  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed bug printing text painting
