@@ -45,7 +45,7 @@ libcomponents_a_SOURCES = phaseshifter.cpp gyrator.cpp componentdialog.cpp    \
   logical_xnor.cpp logical_inv.cpp digi_sim.cpp digi_source.cpp coupler.cpp   \
   rs_flipflop.cpp d_flipflop.cpp jk_flipflop.cpp coaxialline.cpp vprobe.cpp   \
   switch.cpp relais.cpp am_modulator.cpp pm_modulator.cpp opt_sim.cpp         \
-  optimizedialog.cpp tline_4port.cpp                                          \
+  optimizedialog.cpp tline_4port.cpp twistedpair.cpp bondwire.cpp             \
   hicumL2p1.cpp HBT_X.cpp
 
 nodist_libcomponents_a_SOURCES = $(MOCFILES)
@@ -65,7 +65,7 @@ noinst_HEADERS = $(MOCHEADERS) resistor.h components.h capacitor.h vccs.h     \
   logical_xor.h logical_xnor.h logical_inv.h digi_sim.h digi_source.h         \
   coupler.h rs_flipflop.h d_flipflop.h jk_flipflop.h coaxialline.h vprobe.h   \
   switch.h relais.h am_modulator.h pm_modulator.h opt_sim.h tline_4port.h     \
-  hicumL2p1.h HBT_X.h
+  twistedpair.h bondwire.h hicumL2p1.h HBT_X.h
 
 INCLUDES = $(X11_INCLUDES) $(QT_INCLUDES) -I$(top_srcdir)/qucs
 
