@@ -53,6 +53,7 @@
 #include "ccvs.h"
 #include "tline.h"
 #include "tline_4port.h"
+#include "twistedpair.h"
 #include "coaxialline.h"
 #include "substrate.h"
 #include "msline.h"
@@ -70,6 +71,7 @@
 #include "cpwshort.h"
 #include "cpwgap.h"
 #include "cpwstep.h"
+#include "bondwire.h"
 #include "diode.h"
 #include "bjt.h"
 #include "bjtsub.h"
