@@ -22,25 +22,19 @@ TLine_4Port::TLine_4Port()
 {
   Description = QObject::tr("ideal 4-port transmission line");
 
-  Arcs.append(new Arc(-25,-36, 18, 38,16*230, 16*68,QPen(QPen::darkBlue,1)));
-  Arcs.append(new Arc(-25, -2, 18, 38, 16*62, 16*68,QPen(QPen::darkBlue,1)));
+  Arcs.append(new Arc(-28,-40, 18, 38,16*232, 16*33,QPen(QPen::darkBlue,1)));
+  Arcs.append(new Arc(-28,  2, 18, 38, 16*95, 16*33,QPen(QPen::darkBlue,1)));
 
-  Arcs.append(new Arc(-17,-36, 18, 38,16*242, 16*56,QPen(QPen::darkBlue,1)));
-  Arcs.append(new Arc(-17, -2, 18, 38, 16*62, 16*56,QPen(QPen::darkBlue,1)));
+  Lines.append(new Line(-20,-2, 20,-2,QPen(QPen::darkBlue,2)));
+  Lines.append(new Line(-20, 2, 20, 2,QPen(QPen::darkBlue,2)));
 
-  Arcs.append(new Arc( -9,-36, 18, 38,16*242, 16*56,QPen(QPen::darkBlue,1)));
-  Arcs.append(new Arc( -9, -2, 18, 38, 16*62, 16*56,QPen(QPen::darkBlue,1)));
+  Arcs.append(new Arc( 10,-40, 18, 38,16*270, 16*40,QPen(QPen::darkBlue,1)));
+  Arcs.append(new Arc( 10,  2, 18, 38, 16*50, 16*40,QPen(QPen::darkBlue,1)));
 
-  Arcs.append(new Arc( -1,-36, 18, 38,16*242, 16*56,QPen(QPen::darkBlue,1)));
-  Arcs.append(new Arc( -1, -2, 18, 38, 16*62, 16*56,QPen(QPen::darkBlue,1)));
-
-  Arcs.append(new Arc(  7,-36, 18, 38,16*242, 16*68,QPen(QPen::darkBlue,1)));
-  Arcs.append(new Arc(  7, -2, 18, 38, 16*50, 16*68,QPen(QPen::darkBlue,1)));
-
-  Arcs.append(new Arc(-40,-10, 20, 33, 16*32, 16*58,QPen(QPen::darkBlue,2)));
-  Arcs.append(new Arc(-40,-23, 20, 33,16*270, 16*58,QPen(QPen::darkBlue,2)));
-  Arcs.append(new Arc( 20,-10, 20, 33, 16*90, 16*58,QPen(QPen::darkBlue,2)));
-  Arcs.append(new Arc( 20,-23, 20, 33,16*212, 16*58,QPen(QPen::darkBlue,2)));
+  Arcs.append(new Arc(-38,-10, 16, 28, 16*45, 16*45,QPen(QPen::darkBlue,1)));
+  Arcs.append(new Arc(-38,-18, 16, 28,16*270, 16*45,QPen(QPen::darkBlue,1)));
+  Arcs.append(new Arc( 22,-10, 16, 28, 16*90, 16*45,QPen(QPen::darkBlue,1)));
+  Arcs.append(new Arc( 22,-18, 16, 28,16*225, 16*45,QPen(QPen::darkBlue,1)));
 
   Ports.append(new Port(-30,-10));
   Ports.append(new Port( 30,-10));
