@@ -1,3 +1,9 @@
+2006-12-22  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
+
+	* new components: twisted-pair transmission line, bond wire
+	* new symbol for 4-port transmission line
+	* fixed bug on subcircuit parameters without description
+
 2006-12-06  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
 
 	* fixed small bug on creating paintings
